--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
     "body-parser": "^1.16.1",
     "express": "^4.14.1",
     "request": "^2.79.0"
+  },
+   "scripts": {
+    "start": "node server"
   }
 }
