--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
+    "bot": "node bot.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
@@ -17,8 +18,23 @@
     "node": "6.9.5"
   },
   "dependencies": {
-    "body-parser": "^1.16.1",
-    "express": "^4.14.1",
-    "request": "^2.79.0"
-  }
+   "body-parser": "^1.15.0",
+   "express": "^4.13.4",
+   "node-wit": "^3.2.2",
+   "node-uuid": "^1.4.7",
+   "request": "^2.72.0",
+   "babel-core": "^6.0.0",
+   "babel-jest": "^6.0.1",
+   "babel-polyfill": "^6.1.4",
+   "bl": "^1.0.0",
+   "jest-cli": "^0.7.1"
+ },
+ "repository": {
+    "type": "git",
+    "url": "https://github.com/webianks/travy-bot.git"
+  },
+  "bugs": {
+    "url": "https://github.com/webianks/travy-botissues"
+  },
+  "homepage": "https://github.com/webianks/travy-bot#readme"
 }
